fix: manual whitespace below header

--- a/scss/header/_base.scss
+++ b/scss/header/_base.scss
@@ -2,7 +2,6 @@
   width: 100%;
   height: 120px;
   background: var(--color-accent);
-  margin-bottom: 8%;
 
   display: flex;
   flex-direction: row;
